updated placeholder names

--- a/rename to Project name/package.json
+++ b/rename to Project name/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "login_signup",
+  "name": "rename-this-to-match-project-name-in-lower-case-and-add-a-homepage-link-for-gh-hosting",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
